@@ -59,12 +59,11 @@ public class CreateCommand {
             default -> sender.sendMessage(ChatUtils.error("/plotsystem create [plot, location, zone]"));
         }
 
-
     }
 
     private void createPlot(CommandSender sender) {
 
-        //Check if the sender is a player
+        // Check if the sender is a player
         if (!(sender instanceof Player)) {
 
             sender.sendMessage(ChatUtils.error("This command can only be used by players!"));
@@ -72,10 +71,10 @@ public class CreateCommand {
 
         }
 
-        //Get the user
+        // Get the user
         User u = PlotSystem.getInstance().getUser((Player) sender);
 
-        //Check if the user has permission to use this command
+        // Check if the user has permission to use this command
         if (!u.player.hasPermission("uknet.plots.create.plot")) {
 
             u.player.sendMessage(ChatUtils.error("You do not have permission to use this command!"));
@@ -83,7 +82,7 @@ public class CreateCommand {
 
         }
 
-        //Check if the plot is valid, meaning that at least 3 points are selected with the selection tool.
+        // Check if the plot is valid, meaning that at least 3 points are selected with the selection tool.
         if (u.selectionTool.size() < 3) {
 
             u.player.sendMessage(ChatUtils.error("You must select at least 3 points for a valid plot!"));
@@ -91,15 +90,15 @@ public class CreateCommand {
 
         }
 
-        //Open the plot creation menu
-        //Calculate the area of the plot and set a default size estimate.
+        // Open the plot creation menu
+        // Calculate the area of the plot and set a default size estimate.
         u.selectionTool.area();
         u.selectionTool.setDefaultSize();
 
-        //Get the user from the network plugin, this plugin handles all guis.
+        // Get the user from the network plugin, this plugin handles all guis.
         NetworkUser user = Network.getInstance().getUser(u.player);
 
-        //Open the create gui.
+        // Open the create gui.
         u.createPlotGui = new CreatePlotGui(u);
         u.createPlotGui.open(user);
 
@@ -107,8 +106,8 @@ public class CreateCommand {
 
     private void createLocation(CommandSender sender, String[] args) {
 
-        //Check if the sender is a player.
-        //If so, check if they have permission.
+        // Check if the sender is a player.
+        // If so, check if they have permission.
         if (sender instanceof Player p) {
             if (!p.hasPermission("uknet.plots.create.location")) {
 
@@ -118,7 +117,7 @@ public class CreateCommand {
             }
         }
 
-        //Check if they have enough args.
+        // Check if they have enough args.
         if (args.length < 9) {
 
             sender.sendMessage(ChatUtils.error("/plotsystem create location [name] <Xmin> <Ymin> <Zmin> <Xmax> <Ymax> <Zmax>"));
@@ -134,7 +133,7 @@ public class CreateCommand {
         int ymax;
         int zmax;
 
-        //Check if the coordinates are actual numbers.
+        // Check if the coordinates are actual numbers.
         try {
 
             xmin = Integer.parseInt(args[3]);
@@ -145,7 +144,6 @@ public class CreateCommand {
             ymax = Integer.parseInt(args[7]);
             zmax = Integer.parseInt(args[8]);
 
-
         } catch (NumberFormatException e) {
 
             sender.sendMessage(ChatUtils.error("/plotsystem create location [name] <Xmin> <Ymin> <Zmin> <Xmax> <Ymax> <Zmax>"));
@@ -153,7 +151,7 @@ public class CreateCommand {
 
         }
 
-        //Check if the location name is unique.
+        // Check if the location name is unique.
         if (plotSQL.hasRow("SELECT name FROM location_data WHERE name='" + args[2] + "';")) {
 
             sender.sendMessage(ChatUtils.error("The location ")
@@ -163,18 +161,18 @@ public class CreateCommand {
 
         }
 
-        //Get the exact regions of the selected coordinates.
+        // Get the exact regions of the selected coordinates.
         int regionXMin = Math.floorDiv(xmin, 512);
         int regionZMin = Math.floorDiv(zmin, 512);
 
         int regionXMax = Math.floorDiv(xmax, 512);
         int regionZMax = Math.floorDiv(zmax, 512);
 
-        //Calculate the coordinate transformation.
+        // Calculate the coordinate transformation.
         int xTransform = -(regionXMin * 512);
         int zTransform = -(regionZMin * 512);
 
-        //Create the world and add the regions.
+        // Create the world and add the regions.
         Multiverse.createVoidWorld(args[2]);
 
         String saveWorld = PlotSystem.getInstance().getConfig().getString("save_world");
@@ -184,11 +182,11 @@ public class CreateCommand {
             return;
         }
 
-        //Get worlds.
+        // Get worlds.
         World copy = Bukkit.getWorld(saveWorld);
         World paste = Bukkit.getWorld(args[2]);
 
-        //Check that the worlds are not null, else delete the Multiverse world.
+        // Check that the worlds are not null, else delete the Multiverse world.
         if (copy == null || paste == null) {
 
             sender.sendMessage("An error occurred, please contact an admin.");
@@ -197,25 +195,24 @@ public class CreateCommand {
 
         }
 
-        //Copy paste the regions in the save world.
-        //Iterate through the regions one-by-one.
-        //Run it asynchronously to not freeze the server.
+        // Copy paste the regions in the save world.
+        // Iterate through the regions one-by-one.
+        // Run it asynchronously to not freeze the server.
         sender.sendMessage(ChatUtils.success("Transferring terrain, this may take a while."));
 
-
-        //Create atomic boolean to query whether a region can be copied.
+        // Create atomic boolean to query whether a region can be copied.
         AtomicBoolean isReady = new AtomicBoolean(true);
 
-        //Create a list of regions to copy paste.
+        // Create a list of regions to copy paste.
         ArrayList<CopyRegionFormat> regions = new ArrayList<>();
 
         final int yMin = max(ymin, MIN_Y);
-        final int yMax = min(ymax, MAX_Y-1);
+        final int yMax = min(ymax, MAX_Y - 1);
 
         for (int i = regionXMin; i <= regionXMax; i++) {
             for (int j = regionZMin; j <= regionZMax; j++) {
 
-                //Split the region into 4 equal segments of 256x256.
+                // Split the region into 4 equal segments of 256x256.
                 regions.add(new CopyRegionFormat(
                         copy, paste,
                         BlockVector3.at(i * 512, yMin, j * 512),
@@ -249,17 +246,17 @@ public class CreateCommand {
         LOGGER.info("Add segments to list, there are " + regions.size());
         sender.sendMessage(ChatUtils.success("Added " + regions.size() + " segments of 256x256 to the list to be copied."));
 
-        //Iterate until all regions are done.
+        // Iterate until all regions are done.
         Bukkit.getScheduler().runTaskAsynchronously(PlotSystem.getInstance(), () -> {
 
             while (!regions.isEmpty()) {
 
                 if (isReady.get()) {
 
-                    //Set isReady to false so the loop will wait until the previous copy-paste is done.
+                    // Set isReady to false so the loop will wait until the previous copy-paste is done.
                     isReady.set(false);
 
-                    CopyRegionFormat regionFormat = regions.get(0);
+                    CopyRegionFormat regionFormat = regions.getFirst();
 
                     Bukkit.getScheduler().runTaskAsynchronously(PlotSystem.getInstance(), () -> {
 
@@ -288,26 +285,26 @@ public class CreateCommand {
                     Bukkit.getWorld(args[2]),
                     ((regionXMax * 512) + 511), MAX_Y - 1, ((regionZMax * 512) + 511), 0, 0));
 
-            //Add the location to the database.
+            // Add the location to the database.
             if (plotSQL.update("INSERT INTO location_data(name, alias, server, coordMin, coordMax, xTransform, zTransform) VALUES('"
                     + args[2] + "','" + args[2] + "','" + PlotSystem.SERVER_NAME + "'," + coordMin + "," + coordMax + "," + xTransform + "," + zTransform + ");")) {
 
                 sender.sendMessage(ChatUtils.success("Created new location ")
                         .append(Component.text(args[2], NamedTextColor.DARK_AQUA)));
 
-                //Set the status of all effected regions in the region database.
+                // Set the status of all effected regions in the region database.
                 for (int i = regionXMin; i <= regionXMax; i++) {
                     for (int j = regionZMin; j <= regionZMax; j++) {
 
                         String region = i + "," + j;
 
-                        //Change region status in region database.
-                        //If it already exists remove members.
+                        // Change region status in region database.
+                        // If it already exists remove members.
                         globalSQL.update("INSERT INTO server_events(uuid,type,server,event) VALUES(NULL,'network','"
                                 + globalSQL.getString("SELECT name FROM server_data WHERE type='EARTH';") + "'," +
                                 "'region set plotsystem " + region + "');");
 
-                        //Add region to database.
+                        // Add region to database.
                         plotSQL.update("INSERT INTO regions(region,server,location) VALUES('" + region + "','" + PlotSystem.SERVER_NAME + "','" + args[2] + "');");
 
                     }
@@ -316,14 +313,14 @@ public class CreateCommand {
             } else {
 
                 sender.sendMessage(ChatUtils.error("An error occurred, please check the console for more info."));
-                Bukkit.getLogger().warning("An error occured while adding new location!");
+                LOGGER.warning("An error occured while adding new location!");
 
             }
 
-            //If sender is a player teleport them to the location.
+            // If sender is a player teleport them to the location.
             if (sender instanceof Player p) {
 
-                //Get middle.
+                // Get middle.
                 double x = ((globalSQL.getDouble("SELECT x FROM coordinates WHERE id=" + coordMax + ";") +
                         globalSQL.getDouble("SELECT x FROM coordinates WHERE id=" + coordMin + ";")) / 2) +
                         plotSQL.getInt("SELECT xTransform FROM location_data WHERE name='" + args[2] + "';");
@@ -332,7 +329,7 @@ public class CreateCommand {
                         globalSQL.getDouble("SELECT z FROM coordinates WHERE id=" + coordMin + ";")) / 2) +
                         plotSQL.getInt("SELECT zTransform FROM location_data WHERE name='" + args[2] + "';");
 
-                //Teleport to the location.
+                // Teleport to the location.
                 World world = Bukkit.getWorld(args[2]);
 
                 double y = 64;
@@ -351,7 +348,7 @@ public class CreateCommand {
 
     public void createZone(CommandSender sender) {
 
-        //Check if the sender is a player
+        // Check if the sender is a player
         if (!(sender instanceof Player)) {
 
             sender.sendMessage(ChatUtils.error("This command can only be used by players!"));
@@ -359,10 +356,10 @@ public class CreateCommand {
 
         }
 
-        //Get the user
+        // Get the user
         User u = PlotSystem.getInstance().getUser((Player) sender);
 
-        //Check if the user has permission to use this command
+        // Check if the user has permission to use this command
         if (!u.player.hasPermission("uknet.plots.create.zone")) {
 
             u.player.sendMessage(ChatUtils.error("You do not have permission to use this command!"));
@@ -370,7 +367,7 @@ public class CreateCommand {
 
         }
 
-        //Check if the selection is valid, meaning that at least 3 points are selected with the selection tool.
+        // Check if the selection is valid, meaning that at least 3 points are selected with the selection tool.
         if (u.selectionTool.size() < 3) {
 
             u.player.sendMessage(ChatUtils.error("You must select at least 3 points for a valid zone!"));
@@ -378,8 +375,8 @@ public class CreateCommand {
 
         }
 
-        //If the player already has a zones, cancel, as this is the maximum.
-        //Lastly there is a limit of 21 total zones at a time.
+        // If the player already has a zones, cancel, as this is the maximum.
+        // Lastly there is a limit of 21 total zones at a time.
         if (plotSQL.hasRow("SELECT id FROM zone_members WHERE uuid='" + u.player.getUniqueId() + "' AND is_owner=1;")) {
 
             u.player.sendMessage(ChatUtils.error("You already have a zone, close this before creating a new one."));
@@ -392,10 +389,10 @@ public class CreateCommand {
 
         }
 
-        //Get the user from the network plugin, this plugin handles all guis.
+        // Get the user from the network plugin, this plugin handles all guis.
         NetworkUser user = Network.getInstance().getUser(u.player);
 
-        //Open the create zone gui.
+        // Open the create zone gui.
         u.createZoneGui = new CreateZoneGui(u);
         u.createZoneGui.open(user);
     }
